# lcsols-c

./: .gitmodules  CMakeLists.txt  Solution475.c  Solution475.h  Solution475Test.c  Solution475Test.cpp
.github/workflows/: cmake.yml
cmake/: FetchCMocka.cmake
